# inspector

./: .gitignore
ins_msgs/: CMakeLists.txt
ins_msgs/msg/: Product.msg
inspect_api/.config/: dotnet-tools.json
inspect_api/Ins.Api/: Ins.Api.csproj  Program.cs  WeatherForecast.cs
inspect_api/Ins.Api/Controllers/: InspectorController.cs  WeatherForecastController.cs
inspect_api/Ins.Api/Properties/: launchSettings.json
inspect_api/Ins.Infra/: Ins.Infra.csproj
inspect_api/Ins.Infra/Db/: ShaftDbContext.cs
inspect_api/Ins.Infra/Entities/: Entity.cs  Product.cs  Spec.cs  SpecMeta.cs
inspect_api/Ins.Infra/Migrations/: 20230409083545_initial.Designer.cs  20230409083545_initial.cs  ShaftDbContextModelSnapshot.cs
inspect_api/Ins.Infra/Ros2/: LaunchAtStart.cs  Ros2Context.cs
inspect_api/Ins.Infra/Services/: ProductRepository.cs
inspect_api/Ins_ros2/: Ins_ros2.csproj  README.md  ros2cs.spec
inspect_api/Ins_ros2/Ins/Messages/: Product.cs
inspect_node/: CMakeLists.txt  package.xml
inspect_node/config/: inspect_node.yaml
inspect_node/include/air_gauge/: air_gauge_reader.hpp
inspect_node/include/inspect_node/: inspect_node.hpp  product.hpp  visibility_control.h
inspect_node/launch/: inspect_node.launch.py
inspect_node/src/: air_gauge_reader.cpp  inspect_node.cpp  inspect_node_main.cpp  inspect_node_parameters.yaml
modbus/: CMakeLists.txt
modbus/include/modbus/: modbus.hpp  visibility_control.h
modbus/src/: modbus.cpp
